@@ -1,3 +1,7 @@
+02/19/2013
+	- Add Name.canonicalize() and Name.toString() variant for omitting the
+	  final dot in an absolute name.
+
 01/04/2013
 	- 2.1.4 released
 
